Fix: Margin spacing issue on home page

--- a/scss/styles.css
+++ b/scss/styles.css
@@ -441,7 +441,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 5px 15px 25px 15px;
+  margin: 5px 15px 50px 15px;
   box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 .item-preview-title {
